@@ -1,4 +1,4 @@
-/*	$NetBSD: mrinfo.c,v 1.7.10.1 2000/10/17 19:50:24 tv Exp $	*/
+/*	$NetBSD: mrinfo.c,v 1.7.10.2 2002/09/04 00:53:00 itojun Exp $	*/
 
 /*
  * This tool requests configuration info from a multicast router
@@ -67,7 +67,7 @@
 static char rcsid[] =
     "@(#) Header: mrinfo.c,v 1.6 93/04/08 15:14:16 van Exp (LBL)";
 #else
-__RCSID("$NetBSD: mrinfo.c,v 1.7.10.1 2000/10/17 19:50:24 tv Exp $");
+__RCSID("$NetBSD: mrinfo.c,v 1.7.10.2 2002/09/04 00:53:00 itojun Exp $");
 #endif
 #endif
 
@@ -134,7 +134,6 @@ void
 log(int severity, int syserr, const char *format, ...)
 {
 	va_list ap;
-	char    fmt[100];
 
 	va_start(ap, format);
 #else
@@ -145,7 +144,6 @@ log(severity, syserr, format, va_alist)
 	va_dcl
 {
 	va_list ap;
-	char    fmt[100];
 
 	va_start(ap);
 #endif
@@ -160,11 +158,8 @@ log(severity, syserr, format, va_alist)
 		if (severity > LOG_INFO)
 			return;
 	default:
-		fmt[0] = '\0';
 		if (severity == LOG_WARNING)
-			strcat(fmt, "warning - ");
-		strncat(fmt, format, 80);
-		format = fmt;
+			fprintf(stderr, "warning - ");
 		vfprintf(stderr, format, ap);
 		if (syserr == 0)
 			fprintf(stderr, "\n");
@@ -337,12 +332,16 @@ main(argc, argv)
 	char *host;
 	int curaddr;
 
-	setlinebuf(stderr);
-
 	if (geteuid() != 0) {
 		fprintf(stderr, "mrinfo: must be root\n");
 		exit(1);
 	}
+	init_igmp();
+	if (setuid(getuid()) == -1)
+		log(LOG_ERR, errno, "setuid");
+
+	setlinebuf(stderr);
+
 	argv++, argc--;
 	while (argc > 0 && argv[0][0] == '-') {
 		switch (argv[0][1]) {
@@ -377,20 +376,22 @@ main(argc, argv)
 		hp = &bogus;
 		hp->h_length = sizeof(target_addr);
 		hp->h_addr_list = (char **)malloc(2 * sizeof(char *));
+		if (hp->h_addr_list == NULL)
+			log(LOG_ERR, errno, "malloc");
 		hp->h_addr_list[0] = malloc(hp->h_length);
+		if (hp->h_addr_list[0] == NULL)
+			log(LOG_ERR, errno, "malloc");
 		memcpy(hp->h_addr_list[0], &target_addr, sizeof(hp->h_addr_list[0]));
-		hp->h_addr_list[1] = 0;
+		hp->h_addr_list[1] = NULL;
 	} else
 		hp = gethostbyname(host);
 
-	if (hp == NULL) {
+	if (hp == NULL || hp->h_length != sizeof(target_addr)) {
 		fprintf(stderr, "mrinfo: %s: no such host\n", argv[0]);
 		exit(1);
 	}
 	if (debug)
 		fprintf(stderr, "Debug level %u\n", debug);
-
-	init_igmp();
 
 	/* Check all addresses; mrouters often have unreachable interfaces */
 	for (curaddr = 0; hp->h_addr_list[curaddr] != NULL; curaddr++) {
@@ -440,6 +441,8 @@ main(argc, argv)
 		int     ipdatalen, iphdrlen, igmpdatalen;
 
 		FD_ZERO(&fds);
+		if (igmp_socket >= FD_SETSIZE)
+			log(LOG_ERR, 0, "descriptor too big");
 		FD_SET(igmp_socket, &fds);
 
 		gettimeofday(&now, 0);
